force-app/main/default/objects/Quickbooks_info__c/Quickbooks_info__c.object-meta.xml
<CustomObject>
    <label>Quickbooks info</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quickbooks info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>