force-app/main/default/objects/Quickbooks_info__c/fields/Access_token__c.field-meta.xml
<CustomField>
    <fullName>Access_token__c</fullName>
    <label>Access token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>