force-app/main/default/objects/Quickbooks_info__c/fields/Refresh_Token_Expires_In__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token_Expires_In__c</fullName>
    <label>Refresh Token Expires In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>